--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
 tsdat >=1.0.0, <1.1.0
-xarray[complete]
+xarray[complete]~=0.21.1
 act-atmos
-typer
+typer~=0.4.1
+
+pandas~=1.4.2
+pytest~=7.1.2
+numpy~=1.21.6
+pydantic~=1.9.0
+pyyaml~=5.4.1
+jsonpointer~=2.2
+dunamai~=1.9.0
+setuptools~=61.2.0
+matplotlib~=3.4.3
+cmocean~=2.0
